--- a/client/package.json
+++ b/client/package.json
@@ -50,6 +50,7 @@
     "react": "^0.14.8 || ^15.0.0",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^0.14.8 || ^15.0.0",
+    "react-addons-css-transition-group": "*",
     "react-on-rails": "6.1.2",
     "react-router": "^3.0.0",
     "resolve-url-loader": "^1.6.0",
